# pp6calculator

./: CMakeLists.txt  README.md  aw.gitignore  ex2.cpp  homework2_pp6calculator.cpp  homework3_pp6calculator.cpp  pp6calculator.cpp
PP6Lib/: CMakeLists.txt  FileReader.hpp  PP6Math.cpp  PP6Math.hpp  ParticleInfo.cpp  ParticleInfo.hpp  Week3.cpp  Week3.hpp  fourvectorlib.cpp  fourvectorlib.cpp~  fourvectorlib.hpp  fourvectorlib.hpp~  particlelib.cpp  particlelib.hpp  threevectorlib.cpp  threevectorlib.cpp~  threevectorlib.hpp  threevectorlib.hpp~
cppexercises/: PP6Math.cpp  PP6Math.hpp  cpphomework1.cpp  ex1.cpp  ex3.cpp  pp6calculator  pp6calculator.cpp  week2calculator.cpp
